err/wmf-user-metrics.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/config'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/src'...
Listing './lib/python3.5/site-packages/src/etl'...
Compiling './lib/python3.5/site-packages/src/etl/time_series_process_methods.py'...
***   File "./lib/python3.5/site-packages/src/etl/time_series_process_methods.py", line 180
    print build_time_series('20120101000000', '20120201000000', 24, metric,
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/src/metrics'...
Compiling './lib/python3.5/site-packages/src/metrics/blocks.py'...
***   File "./lib/python3.5/site-packages/src/metrics/blocks.py", line 149
    for r in Blocks().process(['11174885', '15132776']): print r
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/metrics/bytes_added.py'...
***   File "./lib/python3.5/site-packages/src/metrics/bytes_added.py", line 325
    print r
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/metrics/live_account.py'...
***   File "./lib/python3.5/site-packages/src/metrics/live_account.py", line 185
    for r in la.process(users,log=True): print r
                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/metrics/namespace_of_edits.py'...
***   File "./lib/python3.5/site-packages/src/metrics/namespace_of_edits.py", line 174
    print namespace_edits_sum(m)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/metrics/revert_rate.py'...
***   File "./lib/python3.5/site-packages/src/metrics/revert_rate.py", line 241
    for r in r.process(users,num_threads=2,rev_threads=10, log_progress=True): print r
                                                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/metrics/survival.py'...
***   File "./lib/python3.5/site-packages/src/metrics/survival.py", line 97
    for r in Survival().process([13234584, 156171], num_threads=2, log_progress=True).__iter__(): print r
                                                                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/metrics/threshold.py'...
***   File "./lib/python3.5/site-packages/src/metrics/threshold.py", line 197
    num_threads=0, log_progress=True).__iter__(): print r
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/metrics/time_to_threshold.py'...
***   File "./lib/python3.5/site-packages/src/metrics/time_to_threshold.py", line 230
    first_edit=0, threshold_edit=1).process([13234584]): print i
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/src/utils'...
Compiling './lib/python3.5/site-packages/src/utils/record_type.py'...
***   File "./lib/python3.5/site-packages/src/utils/record_type.py", line 131
    exec template in namespace
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/wmf_user_metrics-0.1.1.egg-info'...
Listing './readme'...
Listing './share'...
Listing './share/python-wheels'...
